2002-06-09  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/VrmlScene.cpp: Marked doc-comments for
          ProtoNode, ProtoNode::ImplNodeInterface, and ProtoNodeClass
          "internal".

2002-06-08  Braden McDaniel  <braden@endoframe.com>

        * Some Doxygen love for Viewer.

        * Made Viewer::scene public and eliminated accessor method.

2002-06-07  Braden McDaniel  <braden@endoframe.com>

        * Doxygen love and minor cruft removal for Doc and Doc2.

        * src/openvrml/OpenVRML/VrmlScene.cpp: MS Visual C++ doesn't
          like "friend" inline in the class definition; changed for
          ProtoNode::ProtoNodeType.

        * Mark ProtoNode::ProtoNodeType "internal" for Doxygen.

        * src/openvrml/OpenVRML/node.cpp: Sync'd Doxygen comments with
          code.

2002-06-06  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/script.cpp: Fixed segfault introduced
          with JS_AddRoot cleanup.

        * Removed --disable-debug option from configure. Add -DNDEBUG to
          CPPFLAGS instead.

2002-06-05  Braden McDaniel  <braden@endoframe.com>

        * Doxygen love for VrmlScene.

        * Made scene callback IDs enumerants instead of ints.

        * src/openvrml/OpenVRML/script.h: Made
          ScriptNode::ScriptNodeType a friend of ScriptNode.

        * configure.ac: Removed obsolete AC_DEFINEs:
          OPENVRML_MAJOR_VERSION, OPENVRML_MINOR_VERSION,
          OPENVRML_MICRO_VERSION.

        * Moved ProtoNode, ProtoNodeClass definitions and implementation
          to VrmlScene.cpp.

        * Require Autoconf 2.53.

        * Tweaked SpiderMonkey detection macro to work with
          Mozilla 1.0.0.

        * src/openvrml/OpenVRML/script.cpp: Removed vestigal debug
          output from ScriptNode::setEventOut.

        * src/openvrml/OpenVRML/Doc.cpp, src/openvrml/OpenVRML/doc2.hpp:
          std:: correctness fixes.
