@@ -1,7 +1,7 @@
 docdir = $(datadir)/doc/@PACKAGE_TARNAME@-@PACKAGE_VERSION@
 doc_DATA = conformance.html
 
-EXTRA_DIST = Doxyfile.in openvrml.css doxygen-header doxygen-footer
+EXTRA_DIST = $(doc_DATA) Doxyfile.in openvrml.css doxygen-header doxygen-footer
 
 if WITH_DOXYGEN
 install-data-local:
