@@ -1,3 +1,1 @@
-SUBDIRS = openvrml @OPENVRML_GL_SUBDIR@ @LOOKAT_SUBDIR@
-
-EXTRA_DIST = openvrml-gl lookat
+SUBDIRS = openvrml openvrml-gl lookat
