@@ -14,13 +14,16 @@ LIBRARY_VERSION = 1:0:0
 INCLUDES = -I$(top_srcdir)/src/openvrml
 AM_CXXFLAGS = $(X_CFLAGS)
 
+if WITH_GL
 lib_LTLIBRARIES = libopenvrml-gl.la
-
 libopenvrml_gl_la_SOURCES = ViewerOpenGL.cpp OpenGLEvent.cpp
 libopenvrml_gl_la_LDFLAGS = -version-info $(LIBRARY_VERSION) $(GLUT_LIBS) \
 $(GL_LIBS) $(X_PRE_LIBS) $(X_LIBS) $(X_EXTRA_LIBS)
 
 OpenVRMLGLincludedir = $(includedir)/OpenVRML/GL
 OpenVRMLGLinclude_HEADERS = common.h OpenGLEvent.h ViewerOpenGL.h
+endif
 
 noinst_HEADERS = private.h
+
+EXTRA_DIST = ViewerOpenGL.cpp OpenGLEvent.cpp
